# lestacources

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-linux.yml  cmake-build.yml
01-helloworld/: CMakeLists.txt
02-helloworldlib/: CMakeLists.txt
02-helloworldlib/src/: main.cpp
11-simple-SDL-version/: CMakeLists.txt  main.cxx
12-windowed-SDL-version/: CMakeLists.txt  main.cxx
21-SDL-loop/: CMakeLists.txt  main.cxx
22-SDL-engine-static/: CMakeLists.txt
22-SDL-engine-static/lib/: CMakeLists.txt
22-SDL-engine-static/lib/src/: engine.cxx
23-SDL-engine-shared/: CMakeLists.txt
23-SDL-engine-shared/lib/: CMakeLists.txt
23-SDL-engine-shared/lib/include/: engine.hxx
23-SDL-engine-shared/lib/src/: engine.cxx
23-SDL-engine-shared/src/: main.cxx
24-SDL-hot-reload/: CMakeLists.txt  engine.cxx  engine.hxx  game.cxx
30-render-basic/: 00-canvas.cxx  00-canvas.hxx  00-canvas_main.cxx  01-render-line.cxx  01-render-line.hxx  01-render-line_main.cxx  02-render-triangle.cxx  02-render-triangle.hxx  02-render-triangle_main.cxx  03-render-triangle-indexed.cxx  03-render-triangle-indexed.hxx  03-render-triangle-indexed_main.cxx  04-render-triangle-interpolated.cxx  04-render-triangle-interpolated.hxx  04-render-triangle-interpolated_main.cxx  05-render-program.cxx  05-render-program.hxx  05-render-program_main.cxx  CMakeLists.txt  canvas.hxx  canvas_main.cxx
41-opengl/: CMakeLists.txt  engine.cxx  engine.hxx  game.cxx
51-simple-morphing/: CMakeLists.txt  engine.cxx  engine.hxx  fragment_shader.glsl  game.cxx  vertex_shader.glsl  vertices.txt
52-matrices/: CMakeLists.txt  engine.cxx  engine.hxx  game.cxx  vertex_shader.glsl  vertices.txt
52-matrices/glad/: glad.c
53-move-knight/: CMakeLists.txt  engine.cxx  engine.hxx  event.cxx  event.hxx  fragment_shader.glsl  game.cxx  geometry.cxx  geometry.hxx  shader_program.cxx  shader_program.hxx
53-move-knight/glad/: glad.h
HelloWorld/: CMakeLists.txt  main.cpp
HelloWorldLib/: CMakeLists.txt
HelloWorldLib/lib/: CMakeLists.txt
HelloWorldLib/lib/include/: helloworld.hpp
HelloWorldLib/lib/src/: helloworld.cpp
